# adblock2mikrotik_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml.example  hosts.txt
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  codeql.yml  pipeline.yml  update_hosts.yml
src/: lib.rs  main.rs
tests/: integration_hosts_test.rs  integration_test.rs
