[package]
name = "adblock2mikrotik_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.25", features = ["json", "rustls-tls"] }
regex = "1.12.2"
chrono = "0.4.42"
tokio = { version = "1.48.0", features = ["full"] }
lazy_static = "1.5.0"
anyhow = "1.0.100"

[dev-dependencies]
mockito = "1.7.1"
tempfile = "3.23.0"
reqwest = { version = "0.12.25", features = ["blocking"] }
