[package]
name = "adblock2mikrotik_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.35 "
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
regex = "1.12.3"
chrono = "0.4.44"
tokio = { version = "1.49.0", features = ["full"] }
lazy_static = "1.5.0"
anyhow = "1.0.102"

[dev-dependencies]
mockito = "1.7.2"
tempfile = "3.25.0"
reqwest = { version = "0.12.28", features = ["blocking"] }
