[package]
name = "adblock2mikrotik_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.35"
reqwest = "0.13.2"
chrono = "0.4.44"
anyhow = "1.0.102"
tokio = { version = "1.51", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"

[dev-dependencies]
mockito = "1.7.2"
tempfile = "3.26.0"
reqwest = "0.13.2"
tokio = { version = "1.51", features = ["test-util"] }